# hydro

./: .gitignore  .seed.example  CHANGELOG  CLAUDE.md  CODEOWNERS  CONTRIBUTING  Cargo.toml  DEPLOYING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASES.md  RELEASE_PROCESS.md  TESTING.md  go.mod  go.sum
contracts/claim/: Cargo.toml
contracts/claim/schema/: claim.json
contracts/claim/schema/raw/: execute.json  instantiate.json  query.json  response_to_claim_history.json  response_to_config.json  response_to_distribution.json  response_to_pending_claims.json
contracts/claim/src/: contract.rs  error.rs  msg.rs  query.rs  state.rs  testing.rs
contracts/dao-voting-adapter/: Cargo.toml
contracts/dao-voting-adapter/schema/: config_response.json  dao-voting-adapter.json  dao_response.json  dao_voting_adapter_full_schema.json  full_schema.json  generate_full_schema.py
contracts/dao-voting-adapter/schema/raw/: instantiate.json  query.json
contracts/dao-voting-adapter/src/: contract.rs  msg.rs  query.rs  state.rs
contracts/gatekeeper/: Cargo.toml  README.md
contracts/gatekeeper/schema/: gatekeeper.json
contracts/gatekeeper/schema/raw/: execute.json  instantiate.json  query.json  response_to_current_epoch_user_locked.json  response_to_current_stage.json
contracts/gatekeeper/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs  testing.rs  utils.rs
contracts/hydro/: Cargo.toml
contracts/hydro/examples/: hydro_schema.rs
contracts/hydro/proptest-regressions/: score_keeper.txt  testing.txt
contracts/hydro/schema/: all_user_lockups_response.json  all_user_lockups_with_tranche_infos_response.json  all_votes_round_tranche_response.json  constants_response.json  current_round_response.json  execute_msg.json  expired_user_lockups_response.json  full_schema.json  generate_full_schema.py  hydro.json  hydro_full_schema.json  instantiate_msg.json  liquidity_deployment_response.json  proposal_response.json  query_msg.json  round_end_response.json  round_proposals_response.json  round_total_voting_power_response.json  some_user_lockups_response.json  some_user_lockups_with_tranche_infos_response.json  specific_user_lockups_response.json  specific_user_lockups_with_tranche_infos_response.json  top_n_proposals_response.json  tranches_response.json  user_vote_response.json  user_voting_power_response.json  validator_power_ratio_response.json  whitelist_admins_response.json  whitelist_response.json
contracts/hydro/schema/raw/: execute.json  instantiate.json  query.json  response_to_all_available_conversion_funds.json  response_to_all_nft_info.json  response_to_all_operators.json  response_to_all_user_lockups.json  response_to_all_user_lockups_with_tranche_infos.json  response_to_all_votes.json  response_to_approval.json  response_to_approvals.json  response_to_can_lock_denom.json  response_to_constants.json  response_to_gatekeeper.json  (+19 more)
contracts/hydro/src/: contract.rs  cw721.rs  error.rs  gatekeeper.rs  governance.rs  lib.rs  lsm_integration.rs  msg.rs  query.rs  score_keeper.rs  score_keeper_state.rs  slashing.rs  state.rs  testing.rs  testing_buyout_pending_slash.rs  testing_compounder_cap.rs  testing_cw721.rs  testing_deployments.rs  testing_fractional_voting.rs  testing_governance.rs  testing_lock_tracking.rs  testing_locking_unlocking.rs  testing_locks_split_merge.rs  testing_lockup_conversion.rs  testing_lockup_conversion_dtoken.rs  testing_lsm.rs  testing_lsm_integration.rs  testing_lsm_migration.rs  testing_mocks.rs  testing_queries.rs  testing_slashing.rs  testing_snapshoting.rs  testing_token_manager.rs  testing_utils.rs  testing_validators_icqs.rs  token_manager.rs  utils.rs  validators_icqs.rs  vote.rs
contracts/inflow/: Cargo.toml
contracts/inflow-mars-adapter/: Cargo.toml
contracts/inflow-mars-adapter/schema/: inflow-mars-adapter.json
contracts/inflow-mars-adapter/src/: error.rs  mars.rs  msg.rs  state.rs  testing.rs
contracts/inflow/basic-adapter-cosmoshub/: Cargo.toml
contracts/inflow/cctp-adapter/: Cargo.toml
contracts/inflow/cctp-adapter-cosmoshub/: Cargo.toml
contracts/inflow/control-center/: Cargo.toml
contracts/inflow/dasset-adapter/: Cargo.toml
contracts/inflow/datom-adapter/: Cargo.toml
contracts/inflow/eureka-adapter/: Cargo.toml
contracts/inflow/evm/: .env.example  .gitignore  README.md  foundry.toml  package.json
contracts/inflow/forwarder/: Cargo.toml
contracts/inflow/ibc-adapter/: Cargo.toml
contracts/inflow/mars-adapter/: Cargo.toml
contracts/inflow/proxy/: Cargo.toml
contracts/inflow/schema/: inflow.json
contracts/inflow/shares-converter/: Cargo.toml
contracts/inflow/skip-adapter/: Cargo.toml  examples-swaps.txt
contracts/inflow/skip-adapter-cosmoshub/: Cargo.toml
contracts/inflow/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs  testing.rs  testing_adapters.rs  tokenfactory.rs
contracts/inflow/user-registry/: Cargo.toml
contracts/inflow/vault/: ADAPTER_SPEC.md  Cargo.toml  migration.md
contracts/inflow/vault-cosmoshub/: Cargo.toml  migration.md
contracts/liquid-collateral/: Cargo.toml  documentation.md  liquid-collateral-sim.js  liquid-collateral-sim.ts  plan.md  usage_guide.md
contracts/liquid-collateral/src/: calculations.rs  contract.rs  error.rs  lib.rs  mock.rs  msg.rs  state.rs  testing.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/schema/: marketplace.json
contracts/marketplace/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs  testing.rs  testing_state.rs
contracts/token-info-providers/st-token-info-provider/: Cargo.toml
contracts/tribute/: Cargo.toml
contracts/tribute/examples/: tribute_schema.rs
contracts/tribute/schema/: config_response.json  execute_msg.json  full_schema.json  generate_full_schema.py  instantiate_msg.json  outstanding_tribute_claims_response.json  proposal_tributes_response.json  query_msg.json  tribute.json  tribute_full_schema.json
contracts/tribute/src/: contract.rs  lib.rs  migrate.rs  msg.rs  notes.md  query.rs  state.rs  testing.rs
test/e2e/: Cargo.toml
test/e2e/src/: lib.rs  testing.rs
(+810 files in other folders)
