[workspace]
members = [
    "contracts/hydro",
    "contracts/tribute",
    "contracts/fund_calculation",
    "packages/interface",
    "test/e2e"
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = { version = "2.1.2", features = ["cosmwasm_2_0"] }
schemars = "0.8.21"
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.62" }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cosmwasm-schema = "2.1.2"
proptest = "1.0.0"
cw-utils = "2.0.0"
cosmos-sdk-proto = { version = "0.20.0", default-features = false }
prost = "0.12.6"
prost-types = "0.12.6"
cw-orch = "0.25.0"
neutron-sdk = "0.11.0"
neutron-std = "4.2.2-rc"
bech32 = "0.9.1"
serde-json-wasm = "1.0.1"