[workspace]
members = [
    "contracts/hydro",
    "contracts/tribute",
    "contracts/dao-voting-adapter",
    "contracts/liquid-collateral",
    "contracts/token-info-providers/st-token-info-provider",
    "contracts/token-info-providers/d-token-info-provider",
    "contracts/marketplace",
    "contracts/gatekeeper",
    "contracts/inflow",
    "packages/cw-orch-interface",
    "packages/interface",
    "test/e2e",
]
resolver = "2"

[workspace.package]
version = "3.6.2"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-std = { version = "2.1.2", features = ["cosmwasm_2_0"] }
schemars = "0.8.21"
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde_json = "1.0.117"
thiserror = { version = "1.0.62" }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cosmwasm-schema = "2.1.2"
proptest = "1.0.0"
cw-utils = "2.0.0"
cosmos-sdk-proto = { version = "0.20.0", default-features = false }
prost = "0.12.6"
prost-types = "0.12.6"
cw-orch = "0.25.0"
neutron-sdk = "0.11.0"
neutron-std = "4.2.2-rc"
bech32 = "0.11.0"
sha2 = { version = "0.10.8", default-features = false }
ripemd = "0.1.3"
hex = "0.4.3"
serde-json-wasm = "1.0.1"
dao-dao-macros = "2.6.0"
dao-interface = "2.6.0"
