[package]
name = "dao-voting-adapter"
version = "1.0.0"
authors = ["Dusan Maksimovic", "Philip Offtermatt"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.5.4", features = ["cosmwasm_1_1"] }
cosmwasm-schema = { version = "1.5.4" }
cw-storage-plus = "1.1"
cw2 = "1.1"
cw-utils = "1.0"
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
dao-dao-macros = { workspace = true }
dao-interface = { workspace = true }