[package]
name = "hydro"
version = { workspace = true }
edition = { workspace = true }
authors = ["Jehan Tremback", "Philip Offtermatt", "Dusan Maksimovic"]

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }
cosmos-sdk-proto = { workspace = true }
ibc-proto = { git = "https://github.com/cosmos/ibc-proto-rs", rev = "83b7f1075fd72f9a5abdd0baa3d3c02ddabf7f3b", default-features = false }
prost = "0.13"
prost-types = "0.13"
cw-orch = { workspace = true }
bech32 = { workspace = true }
serde-json-wasm = { workspace = true }
interface = { path = "../../packages/interface" }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
proptest = { workspace = true }
