[package]
name = "inflow"
version = { workspace = true }
edition = { workspace = true }
authors = ["Dusan Maksimovic", "Marko Juric", "Philip Offtermatt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
prost = { workspace = true }
