[package]
name = "liquid-collateral"
version = "0.1.0"
edition = "2021"
authors = ["Jehan Tremback"]

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-orch = { workspace = true }
hydro = { path = "../hydro", features = ["library"] }
osmosis-std = "0.25.0"

[dev-dependencies]
cosmwasm-schema = { workspace = true }
proptest = { workspace = true }
osmosis-test-tube = "25.0.0" 