[package]
name = "liquid-collateral"
version = "0.1.0"
edition = "2021"
authors = ["Jehan Tremback"]

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
serde = { version = "1.0.202", default-features = false, features = ["derive"] }
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cosmwasm-schema = { workspace = true }
cw-storage-plus = "1.1.0"
thiserror = "1.0.50"
osmosis-std = "0.25.0"
cw20 = "1.1.2"
cw20-base = "1.1.2"
cw-orch = { workspace = true }
hydro = { path = "../hydro", features = ["library"] }
serde_json = "1.0.0"

[dev-dependencies]
cosmwasm-schema = { workspace = true }
proptest = { workspace = true }
osmosis-test-tube = "25.0.0"
anyhow = "1.0.75" 