[package]
name = "tribute"
version = "2.1.0"
edition = "2018"
authors = ["Jehan Tremback", "Philip Offtermatt", "Dusan Maksimovic"]


exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-orch = { workspace = true }
hydro = { path = "../hydro", features = ["library"] }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
proptest = { workspace = true }
