[package]
name = "test-e2e"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-orch = { workspace = true, features = ["daemon"] }

hydro = { path = "../../contracts/hydro" }
tribute = { path = "../../contracts/tribute" }
interface = { path = "../../packages/interface" }
