[package]
name = "test-e2e"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["rlib"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-orch = { workspace = true, features = ["daemon"] }

hydro = { path = "../../contracts/hydro" }
tribute = { path = "../../contracts/tribute" }
interface = { path = "../../packages/interface" }
