[package]
name = "dasset-adapter"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"] 

[features]
library = []                   

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }

serde = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }

interface = { path = "../../../packages/interface" }

[dev-dependencies]
cw-multi-test = "2.0"
