[package]
name = "vault-cosmoshub"
version = { workspace = true }
edition = { workspace = true }
authors = ["arlai-mk"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw-utils = { workspace = true }
serde-json-wasm = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
token-bindings = { workspace = true }
interface = { path = "../../../packages/interface" }
