[package]
name = "st-token-info-provider"
version = { workspace = true }
edition = { workspace = true }
authors = ["Philip Offtermatt", "Dusan Maksimovic"]

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cosmwasm-schema = { workspace = true }
serde-json-wasm = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
neutron-sdk = { workspace = true }
neutron-std = { workspace = true }
interface = { path = "../../../packages/interface" }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
